css/github-markdown.css
/* ... */
.markdown-body ol ol ol,.markdown-body ol ul ol,.markdown-body ul ol ol,.markdown-body ul ul ol {
list-style-type:lower-alpha
}

.markdown-body dd {
margin-left:0
}

.markdown-body code,.markdown-body pre {
font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    font-size:12px
}

.markdown-body pre {
word-wrap:normal
}

.markdown-body input::-webkit-inner-spin-button,.markdown-body input::-webkit-outer-spin-button {
-webkit-appearance:none;
    appearance:none;
    margin:0
}

.markdown-body .border {
border:1px solid #e1e4e8!important
}

.markdown-body .border-0 {
border:0!important
}

.markdown-body .border-bottom {
border-bottom:1px solid #e1e4e8!important
}

.markdown-body .rounded-1 {
border-radius:3px!important
}

.markdown-body .bg-white {
background-color:var(--bg-primary)!important
}

.markdown-body .bg-gray-light {
background-color:#fafbfc!important
}

.markdown-body .text-gray-light {
color:#6a737d!important
}

.markdown-body .mb-0 {
margin-bottom:0!important
}

.markdown-body .my-2 {
margin-bottom:8px!important;
    margin-top:8px!important
}

.markdown-body .pl-0 {
padding-left:0!important
}

.markdown-body .py-0 {
padding-bottom:0!important;
    padding-top:0!important
}

.markdown-body .pl-1 {
padding-left:4px!important
}

.markdown-body .pl-2 {
padding-left:8px!important
}

.markdown-body .py-2 {
padding-bottom:8px!important;
    padding-top:8px!important
}

.markdown-body .pl-3,.markdown-body .px-3 {
padding-left:16px!important
}

.markdown-body .px-3 {
padding-right:16px!important
}

.markdown-body .pl-4 {
padding-left:24px!important
}

.markdown-body .pl-5 {
padding-left:32px!important
}

.markdown-body .pl-6 {
padding-left:40px!important
}

.markdown-body .f6 {
font-size:12px!important
}

.markdown-body .lh-condensed {
line-height:1.25!important
}

.markdown-body .text-bold {
font-weight:600!important
}

.markdown-body:before {
content:"";
    display:table
}

.markdown-body:after {
clear:both;
    content:"";
    display:table
}

.markdown-body>:first-child {
margin-top:0!important
}

.markdown-body>:last-child {
margin-bottom:0!important
}

.markdown-body a:not([href]) {
color:inherit;
    text-decoration:none
}

.markdown-body blockquote,.markdown-body dl,.markdown-body ol,.markdown-body p,.markdown-body pre,.markdown-body table,.markdown-body ul {
margin-bottom:16px;
    margin-top:0
}

.markdown-body blockquote>:first-child {
margin-top:0
}

.markdown-body blockquote>:last-child {
margin-bottom:0
}

.markdown-body kbd {
background-color:#fafbfc;
    border:1px solid #d1d5da;
    border-bottom-color:#c6cbd1;
    border-radius:3px;
    box-shadow:inset 0 -1px 0 #c6cbd1;
    color: var(--text-secondary);
    display:inline-block;
    font:11px SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    line-height:10px;
    padding:3px 5px;
    vertical-align:middle
}

.markdown-body ol ol,.markdown-body ol ul,.markdown-body ul ol,.markdown-body ul ul {
margin-bottom:0;
    margin-top:0
}

.markdown-body li {
word-wrap:break-all
}

.markdown-body li>p {
margin-top:16px
}

.markdown-body li+li {
margin-top:.25em
}

.markdown-body dl {
padding:0
}

.markdown-body dl dt {
font-size:1em;
    font-style:italic;
    font-weight:600;
    margin-top:16px;
    padding:0
}

.markdown-body dl dd {
margin-bottom:16px;
    padding:0 16px
}

.markdown-body table th {
font-weight:600
}

.markdown-body table td,.markdown-body table th {
border:1px solid #dfe2e5;
    padding:6px 13px
}

.markdown-body table tr {
background-color:var(--bg-primary);
    border-top:1px solid #c6cbd1
}

.markdown-body table tr:nth-child(2n) {
background-color:#f6f8fa
}

.markdown-body img[align=right] {
padding-left:20px
}

.markdown-body img[align=left] {
padding-right:20px
}

.markdown-body .refer-holder {
width: 90%;
    height: auto;
    margin: 0 auto;
    padding: 20px;
    background-color: var(--text-secondary);
    border-left: #24292e 10px;
    border-style: solid;
    color:white;
    font-family: 'Times New Roman', Times, serif;
    transition: color 0.5s ease-in-out;
}

.markdown-body .refer-holder:hover {
color:#41b0ff;
}

.markdown-body .code-holder {
width: 100%;
    height: auto;
    border-radius: 3px;
    margin: 0 auto;
    padding: 10px;
    border-width: 1px;
    border-color: var(--border-color);
    border-style: solid;
}

.markdown-body .code-holder code {
background-color:rgba(27,31,35,.05);
    border-radius:3px;
    font-size:85%;
    margin:0;
    padding:.2em .4em;
    color:var(--text-primary);
    transition: color 0.5s #006ebc ease-in-out;
}

.markdown-body .code-holder code:hover {
color:#006ebc;
}

.markdown-body .math-holder {
width: 90%;
    text-align: center;
    height: auto;
    margin: 0 auto;
    padding: 20px;
    background-color: rgba(27,31,35,.05);
    border-style: solid;
    color: var(--text-primary);
    font-family: 'Times New Roman', Times, serif;
    transition: color 0.5s ease-in-out;
}

.markdown-body pre>code {
background:0 0;
    border:0;
    font-size:100%;
    margin:0;
    padding:0;
    white-space:pre;
    word-break:normal
}

.markdown-body .highlight {
margin-bottom:16px
}

.markdown-body .highlight pre {
margin-bottom:0;
    word-break:normal
}

.markdown-body .highlight pre,.markdown-body pre {
background-color:#f6f8fa;
    border-radius:3px;
    font-size:85%;
    line-height:1.45;
    overflow:auto;
    padding:16px
}

.markdown-body pre code {
background-color:transparent;
    border:0;
    display:inline;
    line-height:inherit;
    margin:0;
    max-width:auto;
    overflow:visible;
    padding:0;
    word-wrap:normal
}

.markdown-body .commit-tease-sha {
color: var(--text-secondary);
    display:inline-block;
    font-family:SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
    font-size:90%
}

.markdown-body .blob-wrapper {
border-bottom-left-radius:3px;
    border-bottom-right-radius:3px;
    overflow-x:auto;
    overflow-y:hidden
}
/* ... */

